force-app/main/default/objects/Trade__c/fields/Buy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Buy_Amount__c</fullName>
    <description>Buy amount for transaction</description>
    <inlineHelpText>Buy amount for transaction</inlineHelpText>
    <label>Buy Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>