force-app/main/default/objects/Trade__c/fields/Buy_Currency__c.field-meta.xml
<CustomField>
    <fullName>Buy_Currency__c</fullName>
    <description>Set of Currencies that are available in our application to be chosen as &apos;BuyCurrency&apos;</description>
    <inlineHelpText>Set of Currencies that are available in our application to be chosen as &apos;BuyCurrency&apos;</inlineHelpText>
    <label>Buy Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Buy_Currencies</valueSetName>
    </valueSet>
</CustomField>