force-app/main/default/objects/Trade__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <description>Transaction Id</description>
    <displayFormat>TR{0000000}</displayFormat>
    <inlineHelpText>Transaction Id</inlineHelpText>
    <label>ID</label>
    <type>AutoNumber</type>
</CustomField>