force-app/main/default/objects/Trade__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>Exchange rate for transaction</description>
    <inlineHelpText>Exchange rate for transaction</inlineHelpText>
    <label>Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>