force-app/main/default/objects/Trade__c/fields/Sell_Currency__c.field-meta.xml
<CustomField>
    <fullName>Sell_Currency__c</fullName>
    <description>Set of Currencies that are available in our application to be chosen as &apos;Sell Currency&apos;</description>
    <inlineHelpText>Set of Currencies that are available in our application to be chosen as &apos;Sell Currency&apos;</inlineHelpText>
    <label>Sell Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sell_Currencies</valueSetName>
    </valueSet>
</CustomField>