force-app/main/default/objects/Trade__c/listViews/Booked_Trades.listView-meta.xml
<ListView>
    <fullName>Booked_Trades</fullName>
    <columns>NAME</columns>
    <columns>Sell_Currency__c</columns>
    <columns>Sell_Amount__c</columns>
    <columns>Buy_Currency__c</columns>
    <columns>Rate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Booked Trades</label>
</ListView>